tests/bad/map_literal_shorthand_inconsistent_type.oc
/// fail: Expected type u32, but got str

def main() {
    let mp = ${5: "Hello", "hi": "bye"}
}